--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             2019
           </td>
           <td>
-            Legal Intern at KRP Legal
+            Legal Intern at KRP
           </td>
         </tr>
         <tr>
